<resources>
    <string name="app_name">MyTrash</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">MASUK</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="sudah_punya_akun">Sudah punya akun ?</string>
    <string name="beranda">Beranda</string>
    <string name="warung">Warung</string>
    <string name="profil">Profil</string>
    <string-array name="rt">
        <item>RT</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
    </string-array>
    <string-array name="rw">
        <item>RW</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_pagi_joko">Selamat Pagi, Joko !</string>
    <string name="coin_anda">Coin Anda</string>
    <string name="tukar_sampah">Tukar Sampah</string>
    <string name="tukar_coin">Tukar Coin</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="tab_text_1">Pemasukan Poin</string>
    <string name="tab_text_2">Pengeluaran Poin</string>
    <string name="name">Nama Pengguna</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="verifikasi_nomor_telepon">Verifikasi Nomor Telepon</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="masukkan_berat_sampah">Masukkan berat sampah</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="rw">RW</string>
    <string name="rt">RT</string>
    <string name="edit_profile_warung">Edit Profile Warung</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="jenis_toko">Jenis Toko</string>
    <string name="contoh_barang_yang_dijual">Contoh Barang yang Dijual</string>
    <string name="update_profile">Update Profile</string>
    <string name="setor_sampah">Setor Sampah</string>
    <string name="daftar_pengguna">Daftar Pengguna</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="menjual">Menjual :</string>
    <string name="total_poin">Total Poin</string>
    <string name="bayar">Bayar</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>