<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/medium"
            android:text="@string/register"
            android:textColor="@color/blackColor"
            android:layout_marginBottom="24dp"
            android:textSize="24sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="2dp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_edittext"
                android:fontFamily="@font/regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="#bbb"
                android:textSize="14sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="2dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_edittext"
                android:fontFamily="@font/regular"
                android:hint="@string/password"
                android:inputType="textPassword"

                android:textColorHint="#bbb"
                android:textSize="14sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="2dp">

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_edittext"
                android:fontFamily="@font/regular"
                android:hint="@string/nomor_telepon"
                android:inputType="phone"

                android:textColorHint="#bbb"
                android:textSize="14sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="2dp">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_edittext"
                android:fontFamily="@font/regular"
                android:hint="@string/nama"
                android:textColorHint="#bbb"

                android:textSize="14sp" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.49"
                app:cardCornerRadius="32dp"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/etRt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_edittext"
                    android:fontFamily="@font/regular"
                    android:hint="@string/rt"
                    android:textColorHint="#bbb"
                    android:inputType="number"
                    android:textSize="14sp" />


            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.02" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.49"
                app:cardCornerRadius="32dp"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/etRw"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_edittext"
                    android:fontFamily="@font/regular"
                    android:hint="@string/rw"
                    android:textColorHint="#bbb"
                    android:inputType="number"
                    android:textSize="14sp" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:paddingTop="8dp"
            android:text="@string/register"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            app:backgroundTint="@color/primaryGreen"
            app:cornerRadius="24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/sudah_punya_akun"
                android:textColor="@color/blackColor"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/btnMasuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:paddingStart="4dp"
                android:paddingLeft="4dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/masuk"
                android:textColor="@color/secondaryColor"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>