<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.editprofilemerchant.EditProfileMerchantActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryGreen"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            android:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/medium"
            android:text="@string/edit_profile_warung"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="92dp"
            android:layout_height="92dp"
            app:cardBackgroundColor="#e5e5e5"
            app:cardCornerRadius="46dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/ivMerchant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/btnEditImage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_editprofilewarung"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_edit_24"
            app:tint="@color/primaryGreen" />


    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMerchantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/nama_toko">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMerchantType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/jenis_toko">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilGoods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/contoh_barang_yang_dijual">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:lines="4"
            android:gravity="top"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bold"
        android:paddingTop="8dp"
        android:textAllCaps="false"
        android:text="@string/update_profile" />
</LinearLayout>